--- a/simu-comp/appsettings.json
+++ b/simu-comp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost;Database=SIMU_COMP;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
