Altera nome do projeto da webapi

--- a/simu-comp/WebApi.csproj
+++ b/simu-comp/WebApi.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <RootNamespace>simu_comp</RootNamespace>
+    <RootNamespace>WebApi</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
