Insere annotations na classe Compra

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
